--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,13 +20,18 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-button {
+button,
+.btn {
   @apply px-3 py-1 font-bold text-lg rounded border;
 }
 
 input,
 select {
-  @apply px-2 py-1;
+  @apply px-2 py-1 bg-black border border-white rounded;
+}
+
+input:disabled {
+  @apply text-white bg-stone-50/15;
 }
 
 .primary {
